--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Gemini Clone</title>
+    <title>Codex AI</title>
   </head>
   <body>
     <div id="root"></div>
